# gobind-example

./: .gitignore  CMakeLists.txt  README.md  go.mod  hello_world.cpp  main.go
